jilles      2006/04/18 00:10:31 UTC	(20060418-5109)
  Log:
  NickServ/UserServ vhost: Never ever allow @!?* in vhosts as
  they have special meaning in all ircds (@ was already
  disallowed).
  

  Changes:	Modified:
  +3 -1		trunk/modules/nickserv/vhost.c (File Modified) 
  +3 -1		trunk/modules/userserv/vhost.c (File Modified) 


gxti        2006/04/17 17:48:00 UTC	(20060417-5107)
  Log:
  Move MD5 code from crypto/ircservices.c and saslserv/crypt.c into a common md5.c
  

  Changes:	Modified:
  +0 -306	trunk/crypto/ircservices.c (File Modified) 
  +1 -0		trunk/include/atheme.h (File Modified) 
  +26 -0	trunk/include/md5.h (File Added) 
  +2 -309	trunk/modules/saslserv/crypt.c (File Modified) 
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +290 -0	trunk/src/md5.c (File Added) 


gxti        2006/04/17 08:18:44 UTC	(20060417-5105)
  Log:
  Autotools fix (cleanup from r5083)
  New SASL mechanism CRYPT for posix crypt module friendly authentication.
  Remove some debugging cruft.
  

  Changes:	Modified:
  +4 -4		trunk/configure (File Modified) 
  +1 -2		trunk/configure.ac (File Modified) 
  +465 -0	trunk/modules/saslserv/crypt.c (File Added) 
  +0 -2		trunk/modules/saslserv/plain.c (File Modified) 
  +0 -6		trunk/modules/saslserv/sasl.c (File Modified) 


gxti        2006/04/17 05:24:24 UTC	(20060417-5103)
  Log:
  Remove base64 code completely from XMLRPC until someone can implement it properly.
  

  Changes:	Modified:
  +0 -2		trunk/include/xmlrpc.h (File Modified) 
  +0 -22	trunk/src/xmlrpc.c (File Modified) 


gxti        2006/04/17 05:22:23 UTC	(20060417-5101)
  Log:
  Replaced old gsasl backend with a shiny new modular system.
  

  Changes:	Modified:
  +19 -235	trunk/configure (File Modified) 
  +10 -15	trunk/configure.ac (File Modified) 
  +1 -0		trunk/dist/example.conf (File Modified) 
  +16 -4	trunk/include/sasl.h (File Modified) 
  +1 -5		trunk/modules/saslserv/Makefile.in (File Modified) 